# GPT_2

./: pyproject.toml
src/model/: Attention.py  Embeddings.py  FeedForward.py  GPTBlock.py  LayerNorm.py  ResidualNet.py
src/utils/: seed.py
